--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,59 @@
+flask
+flask-session
+werkzeug
+sqlite3
 cs50
-Flask
-Flask-Session - pip install flask_session
-pytz - pip install pytz
 requests
+
+
+annotated-types==0.7.0
+anyio==4.6.2.post1
+beautifulsoup4==4.12.3
+blinker==1.8.2
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+colorama==0.4.6
+config==0.5.1
+distro==1.9.0
+Flask==3.0.3
+google==3.0.0
+google-ai-generativelanguage==0.6.10
+google-api-core==2.21.0
+google-api-python-client==2.149.0
+google-auth==2.35.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.3
+googleapis-common-protos==1.65.0
+grpcio==1.67.0
+grpcio-status==1.67.0
+h11==0.14.0
+httpcore==1.0.6
+httplib2==0.22.0
+httpx==0.27.2
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.4
+jiter==0.6.1
+MarkupSafe==3.0.2
+mysql-connector-python==9.1.0
+openai==1.52.2
+proto-plus==1.25.0
+protobuf==5.28.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.9.2
+pydantic_core==2.23.4
+pyparsing==3.2.0
+python-dotenv==1.0.1
+pytz==2024.2
+requests==2.32.3
+rsa==4.9
+sniffio==1.3.1
+soupsieve==2.6
+tqdm==4.66.5
+typing_extensions==4.12.2
+uritemplate==4.1.1
+urllib3==2.2.3
+Werkzeug==3.0.5
